--- a/example/composer.html
+++ b/example/composer.html
@@ -13,8 +13,24 @@ body {
   display: flex;
   margin: 0;
 }
-textarea {
+.hidden {
+  display: none;
+}
+.col {
   flex-grow: 1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.header {
+  padding: 5px;
+  font-size: 12px;
+  font-family: Menlo, monaco, Courier;
+  text-align: center;
+  background: black;
+  color: white;
+}
+textarea {
   font-size: 12px;
   font-family: Menlo, monaco, Courier;
   padding: 20px;
@@ -22,27 +38,58 @@ textarea {
   background: #2a2a2a;
   color: rgba(255,255,255,0.8);
   border: none;
+  width: 100%;
+  height: 100%;
 }
 #send {
   position: fixed;
   right: 30px;
   bottom: 30px;
-  padding: 10px 30px;
+  padding: 10px 20px;
   font-family: Menlo, monaco, Courier;
   background: gold;
+  font-size: 12px;
   color: black;
   text-decoration: none;
+}
+#sent {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  background: black;
+  color: gold;
+  padding: 10px 30px;
+}
+#sent a {
+  text-decoration: none;
+}
+#how {
+  font-size: 12px;
+  font-family: Menlo, monaco, Courier;
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+  background: black;
+  color: gold;
+  padding: 10px 30px;
 }
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://unpkg.com/datacash"></script>
 <script>
+var endpoint = "https://chainfeed.org/send";
 document.addEventListener("DOMContentLoaded", function(event) {
   var dslEl = document.querySelector("#dsl");
   var txEl = document.querySelector("#tx");
   var hexEl = document.querySelector("#hex");
+  var sendEl = document.querySelector("#send");
+  var howEl = document.querySelector("#how");
   dslEl.oninput = function(e) {
     update(e.target.value)
+  }
+  howEl.onclick = function(e) {
+    alert("The first column is where you declaratively describe your transaction (See datacash documentation). The second column is where the generated transaction is displayed. The third column displays the actual hex encoded string that can be broadcasted to BCH network. The default transaction description is just a simple data-only OP_RETURN transaction which only spends 300 satoshi transaction fee and nothing more, but you can experiment with different options as well. WARNING: THIS ACTUALLY WORKS, SO HANDLE WITH CARE.")
+    return false;
   }
   var update = function(html) {
     var h = html.replace(/\n/g, '');
@@ -51,25 +98,60 @@ document.addEventListener("DOMContentLoaded", function(event) {
       hexEl.value = tx.toString()
     })
   }
+  sendEl.onclick = function(e) {
+    var t = hexEl.value;
+    var isvalid = new datacash.bch.Transaction(t).verify();
+    if (isvalid) {
+      send(t)
+    }
+    return false;
+  }
   update(dslEl.value)
 })
+var send = function(transaction) {
+  fetch(endpoint, {
+    headers: { 'Content-type': 'application/json' },
+    headers: {
+      'Accept': 'application/json',
+      'Content-Type': 'application/json'
+    },
+    method: 'POST',
+    body: JSON.stringify({tx: transaction})
+  })
+  .then(function(res) {
+    return res.json();
+  })
+  .then(function(response) {
+    console.log(response);
+    document.querySelector("#sent").innerHTML = "<a href='https://explorer.bitcoin.com/bch/tx/" + response.tx + "' target='_blank'>Success! Click to view Transaction</a>";
+    document.querySelector("#sent").className = "";
+    document.querySelector("#send").className = "hidden";
+  })
+}
 </script>
 </head>
 <body>
+<div class='col'>
+<div class='header'>Transaction Description</div>
 <textarea id='dsl'>
 {
   "data": ["0x6d02", "post to memo.cash!"],
   "cash": {
-    "key": "5JZ4RXH4MoXpaUQMcJHo8DxhZtkf5U5VnYd9zZH8BRKZuAbxZEw",
-    "to": [{
-      "address": "1A2JN4JAUoKCQ5kA4pHhu4qCqma8jZSU81",
-      "value": 300
-    }]
+    "key": "5JZ4RXH4MoXpaUQMcJHo8DxhZtkf5U5VnYd9zZH8BRKZuAbxZEw"
   }
 }
 </textarea>
+</div>
+<div class='col'>
+<div class='header'>Generated Transaction</div>
 <textarea id='tx'></textarea>
+</div>
+<div class='col'>
+<div class='header'>Hex Format</div>
 <textarea id='hex'></textarea>
-<a target="_blank" href='https://bitcoincash.blockexplorer.com/tx/send' id='send'>Open raw transaction broadcast site</a>
+</div>
+<a href='#' id='send'>Click to Broadcast Transaction ></a>
+<div id='sent' class='hidden'></div>
+<a id='how' href='#'>how does this work?</>
 </body>
 </html>
