--- a/example/composer.html
+++ b/example/composer.html
@@ -137,7 +137,7 @@ var send = function(transaction) {
 {
   "data": ["0x6d02", "post to memo.cash!"],
   "cash": {
-    "key": "5JZ4RXH4MoXpaUQMcJHo8DxhZtkf5U5VnYd9zZH8BRKZuAbxZEw"
+    "key": "[ENTER YOUR PRIVATE KEY HERE]"
   }
 }
 </textarea>
