--- a/example/composer.html
+++ b/example/composer.html
@@ -137,7 +137,7 @@ var send = function(transaction) {
 {
   "data": ["0x6d02", "post to memo.cash!"],
   "cash": {
-    "key": "[ENTER YOUR PRIVATE KEY HERE]"
+    "key": ""
   }
 }
 </textarea>
