--- a/example/composer.html
+++ b/example/composer.html
@@ -88,7 +88,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
     update(e.target.value)
   }
   howEl.onclick = function(e) {
-    alert("The first column is where you declaratively describe your transaction (See datacash documentation). The second column is where the generated transaction is displayed. The third column displays the actual hex encoded string that can be broadcasted to BCH network. The default transaction description is just a simple data-only OP_RETURN transaction which only spends 300 satoshi transaction fee and nothing more, but you can experiment with different options as well. WARNING: THIS ACTUALLY WORKS, SO HANDLE WITH CARE.")
+    alert("The first column is where you declaratively describe your transaction (See datacash documentation). The second column is where the generated transaction is displayed. The third column displays the actual hex encoded string that can be broadcasted to the BSV network. The default transaction description is just a simple data-only OP_RETURN transaction which only spends 300 satoshi transaction fee and nothing more, but you can experiment with different options as well. WARNING: THIS ACTUALLY WORKS, SO HANDLE WITH CARE.")
     return false;
   }
   var update = function(html) {
@@ -100,7 +100,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
   }
   sendEl.onclick = function(e) {
     var t = hexEl.value;
-    var isvalid = new datacash.bch.Transaction(t).verify();
+    var isvalid = new datacash.bsv.Transaction(t).verify();
     if (isvalid) {
       send(t)
     }
@@ -123,7 +123,7 @@ var send = function(transaction) {
   })
   .then(function(response) {
     console.log(response);
-    document.querySelector("#sent").innerHTML = "<a href='https://explorer.bitcoin.com/bch/tx/" + response.tx + "' target='_blank'>Success! Click to view Transaction</a>";
+    document.querySelector("#sent").innerHTML = "<a href='https://bchsvexplorer.com/tx/" + response.tx + "' target='_blank'>Success! Click to view Transaction</a>";
     document.querySelector("#sent").className = "";
     document.querySelector("#send").className = "hidden";
   })
